// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispute evidence form needing response, renders correctly 1`] = `
<Page
  className="wcpay-dispute-evidence"
  isNarrow={true}
>
  <Card
    key="general"
    title="General Evidence"
  >
    <TextareaControl
      disabled={false}
      key="product_description"
      label="Product Description"
      onChange={[Function]}
      value=""
    />
    <TextControl
      disabled={false}
      key="customer_name"
      label="Customer Name"
      onChange={[Function]}
      value=""
    />
    <TextControl
      disabled={false}
      key="customer_email_address"
      label="Customer Email"
      onChange={[Function]}
      value=""
    />
    <BaseControl
      id="form-file-upload-base-control-customer_signature"
      key="customer_signature"
      label="Customer Signature"
    >
      <div
        className="file-upload"
      >
        <FormFileUpload
          accept=".pdf, image/png, image/jpeg"
          className={null}
          icon={
            <t
              icon="add-outline"
              size={18}
            />
          }
          id="form-file-upload-customer_signature"
          isLarge={true}
          isPrimary={true}
          onChange={[Function]}
        >
          Upload File
        </FormFileUpload>
        <span
          className={null}
        />
      </div>
    </BaseControl>
    <TextareaControl
      disabled={false}
      key="billing_address"
      label="Customer Billing Address"
      onChange={[Function]}
      value=""
    />
    <TextControl
      disabled={false}
      key="customer_purchase_ip"
      label="Customer IP Address"
      onChange={[Function]}
      value="127.0.0.1"
    />
    <BaseControl
      id="form-file-upload-base-control-receipt"
      key="receipt"
      label="Receipt"
    >
      <div
        className="file-upload"
      >
        <FormFileUpload
          accept=".pdf, image/png, image/jpeg"
          className={null}
          icon={
            <t
              icon="add-outline"
              size={18}
            />
          }
          id="form-file-upload-receipt"
          isLarge={true}
          isPrimary={true}
          onChange={[Function]}
        >
          Upload File
        </FormFileUpload>
        <span
          className={null}
        />
      </div>
    </BaseControl>
    <BaseControl
      id="form-file-upload-base-control-customer_communication"
      key="customer_communication"
      label="Customer Communication"
    >
      <div
        className="file-upload"
      >
        <FormFileUpload
          accept=".pdf, image/png, image/jpeg"
          className={null}
          icon={
            <t
              icon="add-outline"
              size={18}
            />
          }
          id="form-file-upload-customer_communication"
          isLarge={true}
          isPrimary={true}
          onChange={[Function]}
        >
          Upload File
        </FormFileUpload>
        <span
          className={null}
        />
      </div>
    </BaseControl>
  </Card>
  <Card
    key="uncategorized"
    title="Additional Details"
  >
    <TextareaControl
      disabled={false}
      key="uncategorized_text"
      label="Additional Details"
      onChange={[Function]}
      value=""
    />
    <BaseControl
      id="form-file-upload-base-control-uncategorized_file"
      key="uncategorized_file"
    >
      <div
        className="file-upload"
      >
        <FormFileUpload
          accept=".pdf, image/png, image/jpeg"
          className={null}
          icon={
            <t
              icon="add-outline"
              size={18}
            />
          }
          id="form-file-upload-uncategorized_file"
          isLarge={true}
          isPrimary={true}
          onChange={[Function]}
        >
          Upload File
        </FormFileUpload>
        <span
          className={null}
        />
      </div>
    </BaseControl>
  </Card>
  <Card>
    <p>
      When you submit your evidence, we'll format it and send it to the cardholder's bank, then email you once the dispute has been decided.
    </p>
    <p>
      <strong>
        Evidence submission is final.
      </strong>
       
      You can also save this evidence for later instead of submitting it immediately.
       
      <strong>
        We will automatically submit any saved evidence at the due date.
      </strong>
    </p>
    <CardFooter>
      <ForwardRef(Button)
        isLarge={true}
        isPrimary={true}
        onClick={[Function]}
      >
        Submit Evidence
      </ForwardRef(Button)>
      <ForwardRef(Button)
        isDefault={true}
        isLarge={true}
        onClick={[Function]}
      >
        Save For Later
      </ForwardRef(Button)>
    </CardFooter>
  </Card>
</Page>
`;

exports[`Dispute evidence form not needing response, renders correctly 1`] = `
<Page
  className="wcpay-dispute-evidence"
  isNarrow={true}
>
  <Card
    key="general"
    title="General Evidence"
  >
    <TextareaControl
      disabled={false}
      key="product_description"
      label="Product Description"
      onChange={[Function]}
      value=""
    />
    <TextControl
      disabled={false}
      key="customer_name"
      label="Customer Name"
      onChange={[Function]}
      value=""
    />
    <TextControl
      disabled={false}
      key="customer_email_address"
      label="Customer Email"
      onChange={[Function]}
      value=""
    />
    <BaseControl
      id="form-file-upload-base-control-customer_signature"
      key="customer_signature"
      label="Customer Signature"
    >
      <div
        className="file-upload"
      >
        <FormFileUpload
          accept=".pdf, image/png, image/jpeg"
          className={null}
          icon={
            <t
              icon="add-outline"
              size={18}
            />
          }
          id="form-file-upload-customer_signature"
          isLarge={true}
          isPrimary={true}
          onChange={[Function]}
        >
          Upload File
        </FormFileUpload>
        <span
          className={null}
        />
      </div>
    </BaseControl>
    <TextareaControl
      disabled={false}
      key="billing_address"
      label="Customer Billing Address"
      onChange={[Function]}
      value=""
    />
    <TextControl
      disabled={false}
      key="customer_purchase_ip"
      label="Customer IP Address"
      onChange={[Function]}
      value="127.0.0.1"
    />
    <BaseControl
      id="form-file-upload-base-control-receipt"
      key="receipt"
      label="Receipt"
    >
      <div
        className="file-upload"
      >
        <FormFileUpload
          accept=".pdf, image/png, image/jpeg"
          className={null}
          icon={
            <t
              icon="add-outline"
              size={18}
            />
          }
          id="form-file-upload-receipt"
          isLarge={true}
          isPrimary={true}
          onChange={[Function]}
        >
          Upload File
        </FormFileUpload>
        <span
          className={null}
        />
      </div>
    </BaseControl>
    <BaseControl
      id="form-file-upload-base-control-customer_communication"
      key="customer_communication"
      label="Customer Communication"
    >
      <div
        className="file-upload"
      >
        <FormFileUpload
          accept=".pdf, image/png, image/jpeg"
          className={null}
          icon={
            <t
              icon="add-outline"
              size={18}
            />
          }
          id="form-file-upload-customer_communication"
          isLarge={true}
          isPrimary={true}
          onChange={[Function]}
        >
          Upload File
        </FormFileUpload>
        <span
          className={null}
        />
      </div>
    </BaseControl>
  </Card>
  <Card
    key="uncategorized"
    title="Additional Details"
  >
    <TextareaControl
      disabled={false}
      key="uncategorized_text"
      label="Additional Details"
      onChange={[Function]}
      value="winning_evidence"
    />
    <BaseControl
      id="form-file-upload-base-control-uncategorized_file"
      key="uncategorized_file"
    >
      <div
        className="file-upload"
      >
        <FormFileUpload
          accept=".pdf, image/png, image/jpeg"
          className={null}
          icon={
            <t
              icon="add-outline"
              size={18}
            />
          }
          id="form-file-upload-uncategorized_file"
          isLarge={true}
          isPrimary={true}
          onChange={[Function]}
        >
          Upload File
        </FormFileUpload>
        <span
          className={null}
        />
      </div>
    </BaseControl>
  </Card>
  <Card>
    <p>
      When you submit your evidence, we'll format it and send it to the cardholder's bank, then email you once the dispute has been decided.
    </p>
    <p>
      <strong>
        Evidence submission is final.
      </strong>
       
      You can also save this evidence for later instead of submitting it immediately.
       
      <strong>
        We will automatically submit any saved evidence at the due date.
      </strong>
    </p>
    <CardFooter>
      <ForwardRef(Button)
        isLarge={true}
        isPrimary={true}
        onClick={[Function]}
      >
        Submit Evidence
      </ForwardRef(Button)>
      <ForwardRef(Button)
        isDefault={true}
        isLarge={true}
        onClick={[Function]}
      >
        Save For Later
      </ForwardRef(Button)>
    </CardFooter>
  </Card>
</Page>
`;
